# IM1102-DNE-Assignment-2

./: .gitignore  LICENSE  README.md  example_code_assignment-2_LM-Studio.ipynb  pyproject.toml  result_CartPole_selected_models_tests - 2.ipynb  result_CartPole_selected_models_tests.ipynb  result_TicTacTo_selected_models_mulitpleSLM.ipynb  result_TicTatToe_selected_models_mulitpleSLM.ipynb  results_CartPole_slected_models3.ipynb  results_CartPole_slected_models_multipleSLM.ipynb  results_Frozen_Lake_selected_models3.ipynb  results_Frozen_Lake_selected_models4.ipynb  results_Frozen_Lake_selected_models_multipleSLM.ipynb  results_Frozen__Lake_selected_models2.ipynb  results_TicTacTo_SLM_DQ.ipynb  results_TicTacToe_selected_models_1.ipynb  results_TicTacToe_selected_models_singleSLM.ipynb
experiments/dqn_cartpole/run-1/: history.txt  model.pt  parameters.txt
notebooks/: deep_q_learning.ipynb  results_CartPole_critic_actor_learning.ipynb  results_CartPole_deep_q_learning.ipynb  results_FrozenLake_deep_q_learning.ipynb
notebooks-lm/: dq_model.pth  results_Frozen_Lake_selected_LM_models.ipynb
notebooks-rl/: results_CartPole_critic_actor_learning.ipynb  results_CartPole_deep_q_learning.ipynb  results_FrozenLake_deep_q_learning.ipynb  results_TicTacToe_critic_actor_learning.ipynb  results_TicTacToe_dqn_vs_acm_running.ipynb  tictactoe_acm_model.pt  tictactoe_dqn_model.pt
src/: base_agent.py  replay_memory.py  summary_writer.py  utils.py
