[tool.poetry]
name = "ou-notebooks-IM1102-DNE"
version = "1.0.0-beta.2"
description = "Depencies for Notebooks"
authors = []
license = "MIT"
package-mode = false

packages = [{ include = "src", from = "." }]

# Versions of dependencies maybe automatically upgrade to the next patch version
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = "^2.6.0"
pygame = "^2.6.1"
numpy = "1.26.4"
tensorflow = "2.19.0"
matplotlib = "^3.10.1"
tqdm = "^4.67.1"
gymnasium = { version = "^1.1.1", extras = ["atari", "accept-rom-license"] }
moviepy = "^2.1.2"
box2d = "^2.3.10"
IPython = "^9.0.2"
imageio = "^2.31.1"
seaborn = "^0.13.2"
ffmpeg = "^1.4"
pillow = "10.4.0"
opencv-python = "^4.11.0.86"
keras = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
pre-commit = "^4.2.0"
coverage = "^7.8.0"
pytest-dotenv = "^0.5.2"
memory-profiler = "^0.61.0"
jupyterlab = "^4.3.6"


# Keep in sync with .pre-commit-config.yaml
bandit = { extras = ["toml"], version = "1.8.3" }
pip-audit = "2.8.0"
ruff = "0.11.2"
pre-commit-hooks = "5.0.0"
mypy = "1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["*_cli.py"]

[tool.mypy]
exclude = ['tests/', 'scripts/']
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
extend-select = ["D", "W", "B", "Q"]
unfixable = ["D", "B"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
